--- a/Live/Live-5/Live-5/Base.lproj/Main.storyboard
+++ b/Live/Live-5/Live-5/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uts-U1-jk1">
+    <device id="ipad11_0rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,7 +13,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Live_5" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1210"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="diR-FA-HfD">
@@ -36,6 +36,12 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="MainButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5iS-2R-cQa" customClass="MainButton" customModule="Live_5" customModuleProvider="target">
+                                <rect key="frame" x="51" y="685" width="288" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -45,6 +51,53 @@
             </objects>
             <point key="canvasLocation" x="35.877862595419849" y="3.5211267605633805"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="p54-To-0Et">
+            <objects>
+                <viewController id="uts-U1-jk1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JqE-sb-Scc">
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1210"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mCA-Z8-UuD">
+                                <rect key="frame" x="264" y="346" width="306" height="128"/>
+                                <color key="backgroundColor" systemColor="systemCyanColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="hfr-AJ-N6O"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="doy-iB-Txm">
+                                <rect key="frame" x="264" y="541" width="304" height="128"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="304" id="GfC-xF-B8F"/>
+                                    <constraint firstAttribute="height" constant="128" id="I6h-cS-ebT"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VYs-1Z-1Pr">
+                                <rect key="frame" x="265" y="731" width="304" height="128"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zuk-ei-p62"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="doy-iB-Txm" firstAttribute="top" secondItem="mCA-Z8-UuD" secondAttribute="bottom" constant="67" id="3bj-Wt-GKN"/>
+                            <constraint firstItem="VYs-1Z-1Pr" firstAttribute="centerX" secondItem="JqE-sb-Scc" secondAttribute="centerX" id="IYe-ih-Qqn"/>
+                            <constraint firstItem="mCA-Z8-UuD" firstAttribute="leading" secondItem="zuk-ei-p62" secondAttribute="leading" constant="264" id="J0r-Z7-Obk"/>
+                            <constraint firstItem="VYs-1Z-1Pr" firstAttribute="top" secondItem="doy-iB-Txm" secondAttribute="bottom" constant="62" id="SXm-Jb-mti"/>
+                            <constraint firstItem="zuk-ei-p62" firstAttribute="trailing" secondItem="mCA-Z8-UuD" secondAttribute="trailing" constant="264" id="XnG-Hr-xYb"/>
+                            <constraint firstItem="VYs-1Z-1Pr" firstAttribute="width" secondItem="JqE-sb-Scc" secondAttribute="width" multiplier="0.364508" id="fyy-Dw-bAa"/>
+                            <constraint firstItem="VYs-1Z-1Pr" firstAttribute="height" secondItem="JqE-sb-Scc" secondAttribute="height" multiplier="0.105785" id="lx3-E2-HDO"/>
+                            <constraint firstItem="doy-iB-Txm" firstAttribute="leading" secondItem="mCA-Z8-UuD" secondAttribute="leading" id="oxq-Nn-Oeg"/>
+                            <constraint firstItem="mCA-Z8-UuD" firstAttribute="top" secondItem="zuk-ei-p62" secondAttribute="top" constant="322" id="qyZ-PZ-hwL"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xVZ-6z-SQy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1209" y="8"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
@@ -53,8 +106,14 @@
         <systemColor name="systemBrownColor">
             <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
